@@ -7,6 +7,10 @@
   * `.find()` and `.index()`: add keyword argument `right` for rightmost index
   * `.itersearch()`: add start and stop argument, and keyword
     argument `right` (for descending order - starting with rightmost match)
+  * deprecate `util.rindex()` (will be removed in 3.0 release),
+    use `.index(..., right=1)` instead
+  * deprecate `util.make_endian()` (will be removed in 3.0 release),
+    use `bitarray(..., endian=...)` instead
 
 
 2023-12-09   2.8.5:
